--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             left: 50%;
             width: 400px; /* ØªÙØ¨ÙØ± Ø§ÙØ®ÙÙÙØ© ÙÙÙÙØ§Ù */
             height: 400px; /* ØªÙØ¨ÙØ± Ø§ÙØ®ÙÙÙØ© ÙÙÙÙØ§Ù */
-            background-image: url('https://i.postimg.cc/52Hqwtg3/file-00000000aaac62468ce377b4925da5a6-conversation-id-68055126-7468-8004-99f8-ca77feeeca39-message-i.png');
+            background-image: url('');
             background-size: cover;
             background-position: center;
             opacity: 0.5;
